@@ -1,0 +1,1 @@
+T = TypeVar("T", covariant=True, contravariant=True) # [typevar-double-variance]
