@@ -1,0 +1,3 @@
+# One of
+T_co = TypeVar("T_co", covariant=True)
+T_contra = TypeVar("T_contra", contravariant=True)
