@@ -1,0 +1,2 @@
+typevar-double-variance:5:0:5:4::TypeVar cannot be both covariant and contravariant:INFERENCE
+typevar-double-variance:7:0:7:8::TypeVar cannot be both covariant and contravariant:INFERENCE
