@@ -10,6 +10,11 @@ Release date: TBA
   Put new features here and also in 'doc/whatsnew/2.14.rst'
 
 
+* Added new checker ``typevar-double-variance``: The "covariant" and "contravariant" keyword arguments
+  cannot both be set to "True" in a TypeVar.
+
+  Closes ##5895
+
 * ``potential-index-error``: Emitted when the index of a list or tuple exceeds its length.
   This checker is currently quite conservative to avoid false positives. We welcome
   suggestions for improvements.
